2006-05-18  Bernhard Held <bernhard AT bernhardheld.de>

	* components/src-archive.mk: added RELEASE to src-archives, extracted
	from ChangeLog

2006-05-17  Bernhard Held <bernhard AT bernhardheld.de>

	* components/variables.mk: added SDCCRELEASE, extracted from ChangeLog
	* components/bootstrap.mk: added SDCCRELEASE to tarball names

2006-05-09  Bernhard Held <bernhard AT bernhardheld.de>

	* components/sdcc-extra.mk (sdcc-extra): sdcc-extra now needs configuring

2006-05-06 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: get sdcc_theme_navbar.html from $(_DOC_ARCHIVE_SUPPORT_DIR)
	* support/sdcc_theme.pl: added svn:executable property, ...
	* support/sdcc_theme_navbar.html: added
	* README: added desctiption of the tmp directory
	* lib/bootstrap.mk, lib/doc-archive.mk, lib/src-archive.mk, lib/variables.mk:
	  definition of BUILDDATE moved to variables.mk
	* sdcc-build-bootstrap.sh: make $EXTRATARGETS after crontab-spawn

2006-05-05 Borut Razem <borut.razem AT siol.net>

	* Makefile: include lib/doc-archive.mk
	* lib/doc-archive.mk, support/sdcc_theme.pl: added

2006-05-02 Borut Razem <borut.razem AT siol.net>

	* local/amd64-linux1.mk: added SDCCCONFIGUREFLAGS = --enable-doc
	  to configure the doc Makefile and OPT_ENABLE_DOC = 1 to run the
	  doc Makefile

2006-05-01  Bernhard Held <bernhard AT bernhardheld.de>

	* lib/bootstrap.mk (generate-setup): fixed another directory

2006-04-29  Bernhard Held <bernhard AT bernhardheld.de>

	* components/sdcc.mk (sdcc-docs): fixed install directory for docs,
	(sdcc-fromhost-install): fixed new install paths

2006-04-28  Bernhard Held <bernhard AT bernhardheld.de>

	* components/sdcc.mk (sdcc-docs): create doc dir, it's no longer
	created by 'make install' unless --enable-doc is configured
	(install): use DESTDIR instead of tweaking
	suffic, docdir and datadir
	* lib/bootstrap (generate-setup): files are installed in
	$(BUILDIR)/[prefix|datadir|docdir] =